try fix stutter on mobile

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -78,6 +78,7 @@ html, body, .container-fluid {height:100%;}
 }
 #transition {
   transition:all 1s linear;
+  -webkit-backface-visibility: hidden; /* Fix stuttering on mobile */
   position:absolute;
 }
 #kanji-wall span {opacity:0.1;}
